--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -1,14 +1,15 @@
 .banner {
   position: relative;
-  margin: 0 100px;
-  border-radius: 25px;
+  border-radius: 1rem;
   overflow: hidden;
+  margin: 0 4rem;
+  height: 200px;
 
   &__img {
     width: 100%;
-    height: 223px;
+    height: 100%;
     object-fit: cover;
-    filter: brightness(70%);
+    filter: brightness(60%);
   }
 
   &__text {
@@ -18,6 +19,6 @@
     transform: translate(-50%, -50%);
     color: white;
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 600;
   }
 }
