--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,17 +1,12 @@
 .footer {
-  background-color: #000;
+  background-color: black;
   color: white;
   text-align: center;
-  padding: 40px 0;
-  margin-top: 60px;
+  padding: 2rem 0;
 
   &__logo {
-    height: 40px;
     filter: brightness(0) invert(1);
-  }
-
-  p {
-    margin-top: 10px;
-    font-size: 0.9rem;
+    height: 40px;
+    margin-bottom: 1rem;
   }
 }
