--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -2,20 +2,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 40px 100px;
+  margin: 2rem 4rem;
 
   &__logo {
-    height: 40px;
+    height: 50px;
   }
 
   &__nav a {
+    margin-left: 2rem;
     text-decoration: none;
-    color: #ff6060;
-    margin-left: 30px;
+    color: black;
+    font-weight: 500;
+  }
 
-    &.active,
-    &:hover {
-      text-decoration: underline;
-    }
+  &__nav .active {
+    text-decoration: underline;
   }
 }
