--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,9 +1,11 @@
-.home__grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 40px;
-  margin: 50px 100px;
-  background-color: #f6f6f6;
-  padding: 50px;
-  border-radius: 25px;
+.home {
+  &__grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 2rem;
+    margin: 3rem 4rem;
+    background: #f6f6f6;
+    padding: 2rem;
+    border-radius: 1rem;
+  }
 }
