--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,11 +1,19 @@
 .home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+
   &__grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    justify-items: center; /* Centrage horizontal des cards */
     gap: 2rem;
-    margin: 3rem 4rem;
+    margin: 3rem 2rem;
     background: #f6f6f6;
-    padding: 2rem;
+    padding: 3rem 2rem;
     border-radius: 1rem;
+    width: 100%;
+    max-width: 1200px; /* limite la largeur max du conteneur */
   }
 }
