--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -1,9 +1,9 @@
-@import './variables';
-@import './mixins';
+@use './variables' as *;
+@use './mixins' as *;
 
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   background-color: #fff;
-  color: #333;
+  color: $text-color;
 }
