--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -1,24 +1,45 @@
 .banner {
   position: relative;
-  border-radius: 1rem;
+  max-width: 1240px;
+  margin: 0 auto 40px;
+  border-radius: 25px;
   overflow: hidden;
-  margin: 0 4rem;
-  height: 200px;
+  height: 223px;
 
   &__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: brightness(60%);
+    filter: brightness(70%);
+    border-radius: 25px;
   }
 
   &__text {
     position: absolute;
-    top: 50%;
+    top: 38%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    font-size: 2rem;
-    font-weight: 600;
+    font-size: 48px;
+    font-weight: 500;
+    text-align: center;
+    width: 100%;
+    padding: 0 20px;
+  }
+}
+
+/* Responsivité (mobile/tablette) */
+@media screen and (max-width: 768px) {
+  .banner {
+    height: 111px;
+    border-radius: 10px;
+
+    &__text {
+      font-size: 24px;
+      text-align: left;
+      left: 20px;
+      transform: translate(0, -50%);
+      width: auto;
+    }
   }
 }
