--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -2,14 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  //gap: 2rem;
 
   &__grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     justify-items: center; /* Centrage horizontal des cards */
     gap: 2rem;
-    margin: 3rem 2rem;
+    margin: 1rem 2rem;
     background: #f6f6f6;
     padding: 3rem 2rem;
     border-radius: 1rem;
