--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -1,9 +1,15 @@
 @use './variables' as *;
 @use './mixins' as *;
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+* {
+  font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
   background-color: #fff;
   color: $text-color;
 }
