--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -34,6 +34,14 @@
     height: 111px;
     border-radius: 10px;
 
+        width: 335px;
+    height: 111px;
+   
+    opacity: 1;
+    border-width: 1px;
+    mix-blend-mode: Darken;
+
+
     &__text {
       font-size: 24px;
       text-align: left;
