--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -16,7 +16,7 @@
 
   &__text {
     position: absolute;
-    top: 38%;
+    top: 42%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
@@ -28,26 +28,33 @@
   }
 }
 
-/* Responsivité (mobile/tablette) */
+/* ✅ Responsive (mobile uniquement) */
 @media screen and (max-width: 768px) {
   .banner {
-    height: 111px;
+    width: 100%;
+    max-width: 360px;
+    height: 115px;
     border-radius: 10px;
+    margin: 0 auto 20px;
+    overflow: hidden;
 
-        width: 335px;
-    height: 111px;
-   
-    opacity: 1;
-    border-width: 1px;
-    mix-blend-mode: Darken;
-
+    &__img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      filter: brightness(70%);
+      border-radius: 10px;
+    }
 
     &__text {
-      font-size: 24px;
-      text-align: left;
-      left: 20px;
+      top: 40%;
+      left: 16px;
       transform: translate(0, -50%);
-      width: auto;
+      font-size: 24px;
+      font-weight: 500;
+      text-align: left;
+      width: calc(100% - 32px);
+      padding: 0;
     }
   }
 }
