--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -44,6 +44,13 @@
     border-radius: 25px;
     filter: brightness(70%);
   }
+
+  &::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: 1;
+  }
 }
 
 /* ===== COLLAPSE ===== */
