--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -34,7 +34,7 @@
     content: "";
     position: absolute;
     inset: 0;
-    background: rgba(0, 0, 0, 0.4); // assombrissement 40%
+    /*background: rgba(0, 0, 0, 0.4); // assombrissement 40%*/
     z-index: 1;
   }
 }
