--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -84,9 +84,9 @@
   .collapse-content {
     background-color: #f6f6f6;
     color: #000;
-    padding: 20px;
+    /*padding: 20px;*/
     font-size: 16px;
-    line-height: 1.5;
+    
   }
 }
 
